2007-03-17  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-2.20.modules:
	* modulesets/gnome-suites-2.20.modules: move NetworkManager and
	network-manager-applet from gnome-suites-2.20.modules to
	gnome-2.20.modules, also mark gnome-common as a special module in 
	gnome-suites-2.20.modules since it doesn't need to be in a suite

2007-03-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py, jhbuild/modtype/mozillamodule.py: use
	config.makeargs (closes: #418855, patch by James Andrewartha)

2007-03-15  Elijah Newren  <newren gmail com>

	* modulesets/freedesktop-2.18.modules:
	* modulesets/gnome-external-deps-2.20.modules:
	Update system-tools-backends to 2.2.0.

2007-03-15  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: removed network-manager-applet 
	from meta-gnome-desktop, n-m-a was dropped from GNOME Desktop 2.18
	(see announce-devel mailing list); used network-manager-applet-0-6
	branch, it should be the one matching stable NetworkManager branch.

2007-03-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: branched to gnome-2-16 the following
	modules (missed at their time): gnome-common, libbonobo, gnome-python,
	gtksourceview, evolution-webcal, fast-user-switch-applet, alacarte,
	gnome-mag.

2007-03-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: branched to gnome-2-18 the following
	modules: libbonobo, libgnome, libbonoboui, libgnomeui, libgnomeprint,
	gnome-utils, gnome-games, gnome-nettool.  Those branches were not
	announced.

2007-03-13  Elijah Newren  <newren gmail com>

	* modulesets/gnome-2.18.modules: update ekiga, opal, and pwlib.

2007-03-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/moduleset.dtd, modulesets/gnome-external-deps-2.20.modules,
	modulesets/gnome-2.20.modules, modulesets/gnome-suites-2.20.modules,
	modulesets/gnome-2.16.modules, modulesets/freedesktop-2.20.modules,
	modulesets/freedesktop-2.18.modules: extended DTD to cover <perl>