@@ -164,9 +164,9 @@
     </dependencies>
   </autotools>
 
-  <tarball id="startup-notification" version="0.8">
-    <source href="http://download.gnome.org/sources/startup-notification/0.8/startup-notification-0.8.tar.bz2"
-            md5sum="d9b2e9fba18843314ae42334ceb4336d" size="236255"/>
+  <tarball id="startup-notification" version="0.9">
+    <source href="http://download.gnome.org/sources/startup-notification/0.9/startup-notification-0.9.tar.bz2"
+            md5sum="624b42f1fac5a12c543a079e2cd3b366" size="226231"/>
     <branch repo="startup-notification.freedesktop.org"/>
   </tarball>
 
