@@ -1,3 +1,9 @@
+2007-03-17  Elijah Newren  <newren gmail com>
+
+	* modulesets/freedesktop-2.18.modules:
+	* modulesets/gnome-external-deps-2.20.modules:
+	Update startup-notification to 0.9
+
 2007-03-17  Vincent Untz  <vuntz@gnome.org>
 
 	* modulesets/gnome-2.20.modules:
